syntax = "proto3";

package aggregator.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/aggregator";

import "common/api_response.proto";
import "common/access_token.proto";

message WatchCreationRequest {
  int64 user_id = 1;
  int64 creation_id = 2;
  common.AccessToken access_token = 3;
}

message WatchCreationResponse{
  common.ApiResponse msg = 1;
  bool master = 2;
  // 未完成
}