syntax = "proto3";

package auth.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/auth";

import "auth/messages/access_token.proto";
import "auth/messages/refresh_token.proto";
import "common/api_response.proto";

message RefreshRequest {
  auth.messages.RefreshToken refresh_token = 1;
}

message RefreshResponse {
  auth.messages.AccessToken access_token = 1;
  common.ApiResponse msg = 2;
}